8251048: Add some upcall benchmarks
Reviewed-by: mcimadamore